# huggingface-mcp-server-py-bank-of-canada-valet

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: pipeline.yml
src/mcp_server_bank_of_canada/: __init__.py  server.py
src/mcp_server_bank_of_canada/domain/: __init__.py  fx_rate_service.py  types.py
src/mcp_server_bank_of_canada/providers/: __init__.py  bank_of_canada_provider.py
src/mcp_server_bank_of_canada/tools/: get_rate_tool.py
tests/: __init__.py  conftest.py  test_server.py
tests/domain/: test_fx_rate_service.py
tests/providers/: __init__.py  test_bank_of_canada_provider.py
tests/tools/: __init__.py  test_get_rate_tool.py
