[project]
name = "mcp-server-py-bank-of-canada-valet"
version = "1.0.0"
description = "MCP Server for Bank of Canada exchange rates via the Valet API"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
authors = [{ name = "Bill Ying" }]
keywords = ["mcp", "bank-of-canada", "exchange-rates", "valet-api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pyright]
pythonPlatform = "Linux"
pythonVersion = "3.13"
